test/errors/type/str/toint.yasl
mt.lookup('', .toint)(1)
